src/test/ui/self/elision/ref-struct-async.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-struct-async.rs:13:52
   |
LL |     async fn ref_Struct(self: &Struct, f: &u32) -> &u32 {
   |                                                    ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-struct-async.rs:13:57
   |
LL |       async fn ref_Struct(self: &Struct, f: &u32) -> &u32 {
   |  _______________________________-_________________________^
   | |                               |
   | |                               lifetime `'_` defined here
   | |                               lifetime `'_` defined here
LL | |         f
LL | |     }
   | |_____^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-struct-async.rs:17:61
   |
LL |     async fn box_ref_Struct(self: Box<&Struct>, f: &u32) -> &u32 {
   |                                                             ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-struct-async.rs:17:66
   |
LL |       async fn box_ref_Struct(self: Box<&Struct>, f: &u32) -> &u32 {
   |  _______________________________________-__________________________^
   | |                                       |
   | |                                       lifetime `'_` defined here
   | |                                       lifetime `'_` defined here
LL | |         f
LL | |     }
   | |_____^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-struct-async.rs:21:61
   |
LL |     async fn pin_ref_Struct(self: Pin<&Struct>, f: &u32) -> &u32 {
   |                                                             ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-struct-async.rs:21:66
   |
LL |       async fn pin_ref_Struct(self: Pin<&Struct>, f: &u32) -> &u32 {
   |  _______________________________________-__________________________^
   | |                                       |
   | |                                       lifetime `'_` defined here
   | |                                       lifetime `'_` defined here
LL | |         f
LL | |     }
   | |_____^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-struct-async.rs:25:70
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&Struct>>, f: &u32) -> &u32 {
   |                                                                      ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-struct-async.rs:25:75
   |
LL |       async fn box_box_ref_Struct(self: Box<Box<&Struct>>, f: &u32) -> &u32 {
   |  _______________________________________________-___________________________^
   | |                                               |
   | |                                               lifetime `'_` defined here
   | |                                               lifetime `'_` defined here
LL | |         f
LL | |     }
   | |_____^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-struct-async.rs:29:66
   |
LL |     async fn box_pin_Struct(self: Box<Pin<&Struct>>, f: &u32) -> &u32 {
   |                                                                  ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-struct-async.rs:29:71
   |
LL |       async fn box_pin_Struct(self: Box<Pin<&Struct>>, f: &u32) -> &u32 {
   |  ___________________________________________-___________________________^
   | |                                           |
   | |                                           lifetime `'_` defined here
   | |                                           lifetime `'_` defined here
LL | |         f
LL | |     }
   | |_____^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0700`.
